--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <h1>Trouvez votre hébergements pour des vacances de rêve</h1>
     <p>En plein centre-ville ou en pleine nature </p>
     <div id="selection">
-        <div id><button class="location"><span class="fa fa-map-marker-alt"></span></button></div>
-        <div id="textarea"><input  type="text" placeholder="Marseille,France"\></div>
+        <div><button class="location"><span class="fa fa-map-marker-alt"></span></button></div>
+        <div id="textarea"><input  type="text" placeholder="Marseille,France" \></div>
         <div id=recherche><button class="confirmer"><h2>Rechercher</h2><i class="fas fa-search"></i></button></div>
     </div>
     <!--faire des lien externe pour le font awesome-->
