--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <p>En plein centre-ville ou en pleine nature </p>
     <div id="selection">
         <div><button class="location"><span class="fa fa-map-marker-alt"></span></button></div>
-        <div id="textarea"><input  type="text" placeholder="Marseille,France" \></div>
-        <div id=recherche><button class="confirmer"><h2>Rechercher</h2><i class="fas fa-search"></i></button></div>
+        <div id="textarea"><input  type="text" placeholder="Marseille,France"></div>
+        <div id=recherche><button class="confirmer">Rechercher<i class="fas fa-search"></i></button></div>
     </div>
     <!--faire des lien externe pour le font awesome-->
     <div id="filtre">
