--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
+                      </span>
                   </div>
               </div>
               <div class="photo">
