--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div id="selection">
         <div><button class="location"><span class="fa fa-map-marker-alt"></span></button></div>
         <div id="textarea"><input  type="text" placeholder="Marseille,France"></div>
-        <div id=recherche><button class="confirmer"><p>Rechercher</p><i class="fas fa-search"></i></button></div>
+        <div id=recherche><button class="confirmer"><span>Rechercher</span><i class="fas fa-search"></i></button></div>
     </div>
     <!--faire des lien externe pour le font awesome-->
     <div id="filtre">
