--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div id="logo">
           <img src=images/logo/Reservia.svg alt="LogoReservia" />
       </div>
-      <div>
+      <div id="nav">
           <nav> 
               <ul class="navigation">
                   <li class="ligne"><a href="#hebergements"> <span>Hébergements</span> </a></li>
@@ -198,7 +198,7 @@
                   </div>
               </div>
           </div>
-        </aside>  
+        </aside> 
     </div>
         <!--Partie "Activités"-->
      <section id="section3">
