--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css"/>
-    <link href="fontawesome/css/all.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/7ca80583a2.js" crossorigin="anonymous"></script>
     <title>Reservia</title>
  </head>
@@ -33,7 +32,6 @@
         <div id="textarea"><input  type="text" placeholder="Marseille,France"></div>
         <div id=recherche><button class="confirmer"><span>Rechercher</span><i class="fas fa-search"></i></button></div>
     </div>
-    <!--faire des lien externe pour le font awesome-->
     <div id="filtre">
       <h2>Filtres</h2>
       <a href="#"><i class="fa fa-money-bill-wave"></i>Économique</a>
@@ -47,19 +45,21 @@
     <div id="section">
         <!--Partie "Hébérgement"-->
         <section id="section1">
-          <h1><a name=hebergements>Hébergement à marseille</a></h1>
+          <h2><a name=hebergements>Hébergement à marseille</a></h2>
           <div id="cadrehebergement">
             <a href="#">
               <div class="photo">
                 <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="auberge de la cannebière">
                 <div class="descriptions">
-                    <h2>Auberge la cannebière</h2>
+                    <h3>Auberge la cannebière</h3>
                     <p>Nuit à partir de 25€</p>
-                    <i class="fas fa-star iconebleu"></i>
-                    <i class="fas fa-star iconebleu"></i>
-                    <i class="fas fa-star iconebleu"></i>
-                    <i class="fas fa-star iconebleu"></i>
-                    <i class="fas fa-star iconegrise"></i>
+                    <div>
+                      <i class="fas fa-star iconebleu"></i>
+                      <i class="fas fa-star iconebleu"></i>
+                      <i class="fas fa-star iconebleu"></i>
+                      <i class="fas fa-star iconebleu"></i>
+                      <i class="fas fa-star iconegrise"></i>
+                    </div>
                 </div>
               </div>
             </a>
@@ -67,13 +67,15 @@
               <div class="photo">
                 <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port">
                 <div class="descriptions">
-                    <h2>Hôtel du port</h2>
+                    <h3>Hôtel du port</h3>
                     <p>Nuit à partir de 52€</p>
-                    <i class="fas fa-star iconebleu"></i>
-                    <i class="fas fa-star iconebleu"></i>
-                    <i class="fas fa-star iconebleu"></i>
-                    <i class="fas fa-star iconebleu"></i>
-                    <i class="fas fa-star iconebleu"></i>
+                    <div>
+                      <i class="fas fa-star iconebleu"></i>
+                      <i class="fas fa-star iconebleu"></i>
+                      <i class="fas fa-star iconebleu"></i>
+                      <i class="fas fa-star iconebleu"></i>
+                      <i class="fas fa-star iconebleu"></i>
+                    </div>
                 </div>
               </div>
             </a>  
@@ -81,13 +83,15 @@
               <div class="photo">
                 <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel Les mouettes">
                 <div class="descriptions">
-                    <h2>Hôtel Les mouettes</h2>
+                    <h3>Hôtel Les mouettes</h3>
                     <p>Nuit à partir de 76€</p>
-                    <i class="fas fa-star iconebleu"></i>
-                    <i class="fas fa-star iconebleu"></i>
-                    <i class="fas fa-star iconebleu"></i>
-                    <i class="fas fa-star iconebleu"></i>
-                    <i class="fas fa-star iconegrise"></i>
+                    <div>
+                      <i class="fas fa-star iconebleu"></i>
+                      <i class="fas fa-star iconebleu"></i>
+                      <i class="fas fa-star iconebleu"></i>
+                      <i class="fas fa-star iconebleu"></i>
+                      <i class="fas fa-star iconegrise"></i>
+                    </div>
                 </div>
               </div>
             </a>   
@@ -95,13 +99,15 @@
               <div class="photo">
                 <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer">
                 <div class="descriptions">
-                    <h2>Hôtel de la mer </h2>
+                    <h3>Hôtel de la mer </h3>
                     <p>Nuit à partir de 46€</p>
-                    <i class="fas fa-star iconebleu"></i>
-                    <i class="fas fa-star iconebleu"></i>
-                    <i class="fas fa-star iconebleu"></i>
-                    <i class="fas fa-star iconegrise"></i>
-                    <i class="fas fa-star iconegrise"></i>
+                    <div>
+                      <i class="fas fa-star iconebleu"></i>
+                      <i class="fas fa-star iconebleu"></i>
+                      <i class="fas fa-star iconebleu"></i>
+                      <i class="fas fa-star iconegrise"></i>
+                      <i class="fas fa-star iconegrise"></i>
+                    </div>
                 </div>
               </div>
             </a>  
@@ -109,13 +115,15 @@
               <div class="photo">
                 <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="auberge Le Panier">
                 <div class="descriptions">
-                    <h2>Auberge Le panier</h2>
+                    <h3>Auberge Le panier</h3>
                     <p>Nuit à partir de 23€</p>
-                    <i class="fas fa-star iconebleu"></i>
-                    <i class="fas fa-star iconebleu"></i>
-                    <i class="fas fa-star iconebleu"></i>
-                    <i class="fas fa-star iconebleu"></i>
-                    <i class="fas fa-star iconegrise"></i>
+                    <div>
+                      <i class="fas fa-star iconebleu"></i>
+                      <i class="fas fa-star iconebleu"></i>
+                      <i class="fas fa-star iconebleu"></i>
+                      <i class="fas fa-star iconebleu"></i>
+                      <i class="fas fa-star iconegrise"></i>
+                    </div>
                 </div>
               </div>
             </a>  
@@ -123,24 +131,26 @@
               <div class="photo">
                 <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina">
                 <div class="descriptions">
-                    <h2>Hôtel chez Amina</h2>
+                    <h3>Hôtel chez Amina</h3>
                     <p>Nuit à partir de 96€</p>
-                    <i class="fas fa-star iconebleu"></i>
-                    <i class="fas fa-star iconebleu"></i>
-                    <i class="fas fa-star iconebleu"></i>
-                    <i class="fas fa-star iconebleu"></i>
-                    <i class="fas fa-star iconegrise"></i>
+                    <div>
+                      <i class="fas fa-star iconebleu"></i>
+                      <i class="fas fa-star iconebleu"></i>
+                      <i class="fas fa-star iconebleu"></i>
+                      <i class="fas fa-star iconebleu"></i>
+                      <i class="fas fa-star iconegrise"></i>
+                    </div>
                 </div>
               </div>
             </a> 
               
           </div>
-          <h2>Afficher plus</h2>
+          <h3>Afficher plus</h3>
     </section>
             <!--Partie "Les plus populaires"-->
         <aside id="section2">
           <div id="titrepopulaire">
-              <h1>Les plus populaires</h1>
+              <h2>Les plus populaires</h2>
               <i class="fas fa-chart-line"></i>
           </div>
           <div id="cadrepopulaire">
@@ -148,13 +158,15 @@
               <div class="photo">
                 <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le soleil du matin">
                 <div class="descriptions">
-                    <h2>Hôtel Le soleil du matin</h2>
+                    <h3>Hôtel Le soleil du matin</h3>
                     <p>Nuit à partir de 128€</p>
-                    <i class="fas fa-star iconebleu"></i>
-                    <i class="fas fa-star iconebleu"></i>
-                    <i class="fas fa-star iconebleu"></i>
-                    <i class="fas fa-star iconebleu"></i>
-                    <i class="fas fa-star iconebleu"></i>
+                    <div>
+                      <i class="fas fa-star iconebleu"></i>
+                      <i class="fas fa-star iconebleu"></i>
+                      <i class="fas fa-star iconebleu"></i>
+                      <i class="fas fa-star iconebleu"></i>
+                      <i class="fas fa-star iconebleu"></i>
+                    </div>
                 </div>
             </div>
             </a>
@@ -162,13 +174,15 @@
               <div class="photo">
                 <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes">
                 <div class="descriptions">
-                    <h2>Au coeur de l'eau Chambres d'hôtes</h2>
+                    <h3>Au coeur de l'eau Chambres d'hôtes</h3>
                     <p>Nuit à partir de 71€</p>
-                    <i class="fas fa-star iconebleu"></i>
-                    <i class="fas fa-star iconebleu"></i>
-                    <i class="fas fa-star iconebleu"></i>
-                    <i class="fas fa-star iconebleu"></i>
-                    <i class="fas fa-star iconegrise"></i>
+                    <div>
+                      <i class="fas fa-star iconebleu"></i>
+                      <i class="fas fa-star iconebleu"></i>
+                      <i class="fas fa-star iconebleu"></i>
+                      <i class="fas fa-star iconebleu"></i>
+                      <i class="fas fa-star iconegrise"></i>
+                    </div>
                 </div>
               </div>
             </a>  
@@ -176,13 +190,15 @@
               <div class="photo">
                 <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Tout bleu et Blanc">
                 <div class="descriptions">
-                    <h2>Hôtel Tout bleu et Blanc</h2>
+                    <h3>Hôtel Tout bleu et Blanc</h3>
                     <p>Nuit à partir de 68€</p>
-                    <i class="fas fa-star iconebleu"></i>
-                    <i class="fas fa-star iconebleu"></i>
-                    <i class="fas fa-star iconebleu"></i>
-                    <i class="fas fa-star iconebleu"></i>
-                    <i class="fas fa-star iconegrise"></i>
+                    <div>
+                      <i class="fas fa-star iconebleu"></i>
+                      <i class="fas fa-star iconebleu"></i>
+                      <i class="fas fa-star iconebleu"></i>
+                      <i class="fas fa-star iconebleu"></i>
+                      <i class="fas fa-star iconegrise"></i>
+                    </div>
                 </div>
             </div>
             </a> 
@@ -192,65 +208,67 @@
     </div>
         <!--Partie "Activités"-->
      <section id="section3">
-        <h1><a name="Activites">Activités à Marseille</a></h1>
+        <a name="Activites">
+          <h2>Activités à Marseille</h2>
+        </a>
         <div id="cadreactivite">
          <a href="#">
           <div class="photo">
-            <div>
+            <div class="cadre">
              <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="vieuxport">
             </div>
             <div class="descriptions">
-                <h2>Vieux Port</h2>
+                <h3>Vieux Port</h3>
             </div>
           </div>
          </a>
          <a href="#">
           <div class="photo">
-            <div>
-             <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
+            <div class="cadre">
+             <img src="images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
             </div>
             <div class="descriptions">
-                <h2>Fort de Pomègues</h2>
+                <h3>Fort de Pomègues</h3>
             </div>
           </div>
          </a>
          <a href="#">
           <div class="photo">
-            <div>
+            <div class="cadre">
              <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Îles du Frioul">
             </div>
             <div class="descriptions">
-                <h2>Îles du Frioul</h2>
+                <h3>Îles du Frioul</h3>
             </div>
           </div>
          </a>
          <a href="#">
           <div class="photo">
-            <div>
+            <div class="cadre">
               <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc National des Calanques">
             </div>
             <div class="descriptions">
-                <h2>Parc National des Calanques</h2>
+                <h3>Parc National des Calanques</h3>
             </div>
           </div>
          </a>
          <a href="#">
           <div class="photo">
-            <div>
+            <div class="cadre">
              <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde">
             </div>
              <div class="descriptions">
-                 <h2>Notre-Dame-de-la-Garde</h2>
+                 <h3>Notre-Dame-de-la-Garde</h3>
              </div>
           </div>
          </a>
          <a href="#">
           <div class="photo">
-            <div>
+            <div class="cadre">
               <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp">
             </div>
             <div class="descriptions">
-                <h2>Parc Longchamp</h2>
+                <h3>Parc Longchamp</h3>
             </div>
           </div>
          </a>
@@ -286,4 +304,4 @@
   </footer>
 
  </body>
-</html>-g fvcdexsz
+</html>
