--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div id="section">
         <!--Partie "Hébérgement"-->
         <section id="section1">
-          <h2><a name=hebergements>Hébergement à marseille</a></h2>
+          <h2><a id=hebergements>Hébergement à marseille</a></h2>
           <div id="cadrehebergement">
             <a href="#">
               <div class="photo">
@@ -208,7 +208,7 @@
     </div>
         <!--Partie "Activités"-->
      <section id="section3">
-        <a name="Activites">
+        <a id="Activites">
           <h2>Activités à Marseille</h2>
         </a>
         <div id="cadreactivite">
